crates/nirvash-macros/tests/fixtures/attribute_missing_target.stderr
error: missing target spec path; use #[invariant(SpecType)]
  --> tests/fixtures/attribute_missing_target.rs:33:1
   |
33 | #[invariant]
   | ^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `invariant` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `nirvash::BoolExpr`
 --> tests/fixtures/attribute_missing_target.rs:1:5
  |
1 | use nirvash::BoolExpr;
  |     ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
